Try Brotli compression instead of gzip

--- a/ShipLoopskape/index.html
+++ b/ShipLoopskape/index.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Builds.loader.js";
+      var loaderUrl = buildUrl + "/NoCompression.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Builds.data.unityweb",
-        frameworkUrl: buildUrl + "/Builds.framework.js.unityweb",
-        codeUrl: buildUrl + "/Builds.wasm.unityweb",
+        dataUrl: buildUrl + "/NoCompression.data.br",
+        frameworkUrl: buildUrl + "/NoCompression.framework.js.br",
+        codeUrl: buildUrl + "/NoCompression.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Vildanix's Games",
         productName: "Ludum Dare 47 Stuck in a Loop",
