Oprava odkazu na webové realizace Oprava odkazů na vizualizace schodiště

--- a/ludum-dare.html
+++ b/ludum-dare.html
@@ -39,7 +39,7 @@
 									</li>
 							
 									<li>
-											<a href="/webpages" title="Webové stránky">
+											<a href="/weby" title="Webové stránky">
 													<i class="material-icons">web</i><span class="description">Realizované weby</span>
 											</a>
 									</li>
