--- a/vizualizace.html
+++ b/vizualizace.html
@@ -39,7 +39,7 @@
 									</li>
 							
 									<li>
-											<a href="/webpages" title="Webové stránky">
+											<a href="/weby" title="Webové stránky">
 													<i class="material-icons">web</i><span class="description">Realizované weby</span>
 											</a>
 									</li>
@@ -61,15 +61,15 @@
 				<div class="project">
 					<h3>Koncept využití skleněných panelů ve schodišti</h3>
 					<p>
-						<a href="/images/rendery/studio-produkty/schodiste_bubbles_bottom.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_bottom_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_bubbles_half.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_half_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_bubbles_middle.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_middle_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_bubbles_top.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_top_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_panel_oblouk_01.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_01_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_panel_oblouk_02.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_02_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_panel_oblouk_03.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_03_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_panel_oblouk_04.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_04_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
-						<a href="/images/rendery/studio-produkty/schodiste_panel_oblouk_05.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_05_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_bubbles_bottom.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_bottom_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_bubbles_half.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_half_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_bubbles_middle.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_middle_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_bubbles_top.jpg"><img src="/images/rendery/studio-produkty/schodiste_bubbles_top_prev.jpg" alt="Náhled schodiště s bublinama" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_panel_oblouk_01.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_01_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_panel_oblouk_02.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_02_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_panel_oblouk_03.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_03_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_panel_oblouk_04.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_04_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-schodiste/schodiste_panel_oblouk_05.jpg"><img src="/images/rendery/studio-produkty/schodiste_panel_oblouk_05_prev.jpg" alt="Náhled schodiště s brusem" class="alignleft" width="300" height="300"></a>
 					</p>
 				</div>
 			</section>
