Zrušení karet na úvodní stránce, doplnění stylů pro uspořádání galerie

--- a/vizualizace.html
+++ b/vizualizace.html
@@ -9,7 +9,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;1,300;1,600&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src='scripts/jquery.photobox.js'></script>
+		<script src='/scripts/jquery.photobox.js'></script>
 </head>
 <body>
     <article id="main" class="shadow">
@@ -75,12 +75,16 @@
 					</p>
 				</div>
 				<div class="project gallery">
-					<h3>Koncept využití skleněných panelů v koupelně</h3>
+					<h3>Koncept využití skleněných panelů v interierech</h3>
 					<p>
 						<a href="/images/rendery/studie-koupelna/diamond_line_silver.jpg"><img src="/images/rendery/studie-koupelna/diamond_line_silver_prev.jpg" alt="Náhled koupelny se skleněnými panely" class="alignleft" width="300" height="300"></a>
 						<a href="/images/rendery/studie-koupelna/diamond_mirror_silver.jpg"><img src="/images/rendery/studie-koupelna/diamond_mirror_silver_prev.jpg" alt="Náhled koupelny se skleněnými panely" class="alignleft" width="300" height="300"></a>
 						<a href="/images/rendery/studie-koupelna/diamond_wall_silver.jpg"><img src="/images/rendery/studie-koupelna/diamond_wall_silver_prev.jpg" alt="Náhled koupelny se skleněnými panely" class="alignleft" width="300" height="300"></a>
 						<a href="/images/rendery/studie-koupelna/stoneway_line_gold_shaped.jpg"><img src="/images/rendery/studie-koupelna/stoneway_line_gold_shaped_prev.jpg" alt="Náhled koupelny se skleněnými panely" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-panely/door_diamond.jpg"><img src="/images/rendery/studie-panely/door_diamond_prev.jpg" alt="Náhled interiéru se skleněnými panely s reliéfem napodobujícím kárový brus" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-panely/door_lens.jpg"><img src="/images/rendery/studie-panely/door_lens_prev.jpg" alt="Náhled interiéru se skleněnými panely s reliéfem ve tvaru čoček" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-panely/lobby_cocky_chrom.jpg"><img src="/images/rendery/studie-panely/lobby_cocky_chrom_prev.jpg" alt="Náhled interiéru se skleněnými panely zasazenými do chromované patky" class="alignleft" width="300" height="300"></a>
+						<a href="/images/rendery/studie-panely/lobby_cocky_mosaz.jpg"><img src="/images/rendery/studie-panely/lobby_cocky_mosaz_prev.jpg" alt="Náhled interiéru se skleněnými panely zasazené do mosazné patky" class="alignleft" width="300" height="300"></a>
 					</p>
 				</div>
 			</section>
