Doplnění chybějících stylů pro photobox galerie

--- a/vizualizace.html
+++ b/vizualizace.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src='/scripts/jquery.photobox.js'></script>
+		<link rel="stylesheet" href="css/photobox.css">
+		<link rel="stylesheet" href="css/photobox.ie.css">
 </head>
 <body>
     <article id="main" class="shadow">
