Korekce menu a překlepy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<ul id="links">
 									<li>
 											<a href="/" title="Bio">
-													<i class="material-icons">person</i><span class="description">Zaměření</span>
+													<i class="material-icons">person</i><span class="description">Činnost</span>
 											</a>
 									</li>
 									<li>
@@ -48,12 +48,8 @@
 				</nav>
 			</header>
 			<section id="content">
-				<h2>Zaměření</h2>
-				<p>
-				
-				</p>
+				<h2>Činnost</h2>
 				<div>
-
 						<h3>Programování</h3>
 						<p>
 						Programuji weby v PHP a jQuery obvykle s využitím redakčního systému Wordpress. Několik aplikací jsem realizoval s využitím frameworku Slim a Laravel.
