--- a/ludum-dare.html
+++ b/ludum-dare.html
@@ -23,7 +23,7 @@
 					<ul id="links">
 									<li>
 											<a href="/" title="Bio">
-													<i class="material-icons">person</i><span class="description">Zaměření</span>
+													<i class="material-icons">person</i><span class="description">Činnost</span>
 											</a>
 									</li>
 									<li>
@@ -55,7 +55,7 @@
 					<div class="project">
 						<h3>Memory room</h3>
 						<img src="/images/projekty/ld-memory-room.jpg" alt="Náhled hry Memory Room" class="alignleft" width="347" height="182">
-						<p>Hra na téma <strong>One room</strong>. První účast v Ludum dare. Cílem bylo vytvořit simulátor počítačové paměti v podobě budovatelské strategie. Vypracovaný systém stavby dovoloval rotaci krychle a stavbu na všech vnitřních stěnách, který zůstal nrvyužit při implementaci herních mechanik.</p>
+						<p>Hra na téma <strong>One room</strong>. První účast v Ludum dare. Cílem bylo vytvořit simulátor počítačové paměti v podobě budovatelské strategie. Vypracovaný systém stavby dovoloval rotaci krychle a stavbu na všech vnitřních stěnách, který zůstal nevyužit při implementaci herních mechanik.</p>
 						<a href="https://vildanix.itch.io/ld37-memory-room">Odkaz na hru</a><br>
 						<a href="https://github.com/Vildanix/Ludum-dare-37">Zdrojový kód projektu</a>
 					</div>
