--- a/vizualizace.html
+++ b/vizualizace.html
@@ -27,7 +27,7 @@
 					<ul id="links">
 									<li>
 											<a href="/" title="Bio">
-													<i class="material-icons">person</i><span class="description">Zaměření</span>
+													<i class="material-icons">person</i><span class="description">Činnost</span>
 											</a>
 									</li>
 									<li>
