--- a/weby.html
+++ b/weby.html
@@ -27,7 +27,7 @@
 					<ul id="links">
 									<li>
 											<a href="/" title="Bio">
-													<i class="material-icons">person</i><span class="description">Zaměření</span>
+													<i class="material-icons">person</i><span class="description">Činnost</span>
 											</a>
 									</li>
 									<li>
@@ -69,9 +69,9 @@
 					<a href="https://www.goldberg.glass">Odkaz na web</a>
 				</div>
 				<div class="project">
-					<h3>G1 PARTNERS web</h3>
+					<h3>G1 PARTNERS firemní web</h3>
 					<a href="/images/projekty/web-g1.jpg"><img src="/images/projekty/web-g1_prev.jpg" alt="Náhled webu G1 PARTNERS s.r.o." class="alignleft" width="300" height="300"></a>
-					<p>Firemní webové stránky sklářské firmy G1 PARTNERS s.r.o. sprezentací realizovaných produktů a využívaných technologií.</p>
+					<p>Firemní webové stránky sklářské firmy G1 PARTNERS s.r.o. s prezentací realizovaných produktů a využívaných technologií.</p>
 					<a href="https://www.g1.cz">Odkaz na web</a>
 				</div>
 				<div class="project">
